# aitalked-server

./: Cargo.toml  README.md  rust-toolchain  rust-toolchain.toml
.github/workflows/: ci.yml  review.yml
assets/: index.html
src/: icon.rs  main.rs  model.rs  web.rs  worker.rs
src/voices/: images.rs  info.rs  mod.rs
