[package]
name = "aitalked-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["macros", "net", "rt-multi-thread", "time"] }
aitalked = { git = "https://github.com/yanorei32/aitalked", commit = "5fb8afb08512da921a4a6ec8f5d0faac64dd839f" }
encoding_rs = "0.8.35"
anyhow = "1.0.100"
directories = "6.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zip = "5.1.1"
once_cell = "1.21.3"
bytes = "1.10.1"
base64 = "0.22.1"
